feat: rename models package to dto, added migrations to tasks
